# Knowledge-Graph-Completion-From-Foundations-to-Advanced-Methods

./: 04_training_and_evaluation.md  05_translational_models.md  06_tensor_factorization_models.md  09_gnns_for_kgc.md  APPENDIX_cheatsheet.md  APPENDIX_exercises.md  README.md  pyproject.toml  requirements.txt
Notes/: 01_what_is_a_kg.md  02_the_kgc_problem.md  03_representing_graphs.md  07_relation_patterns.md  08_practical_pipeline.md  10_neuro_symbolic.md  11_text_and_llms.md  12_advanced_topics.md  GLOSSARY.md  README.md  REFERENCES.md
data/: test.txt  train.txt  valid.txt
examples/: compare_models.py
